# TextEditor

./: CMakeLists.txt  codelibrary.cpp  codelibrary.h  comments  main.cpp  mainwindow.cpp  mainwindow.h
core/: codelibrary.cpp  codelibrary.h  comments
editorwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
libs/: QtSMTPClient.pri  QtSMTPClient.pro  QtSMTPClient.sln  QtSMTPClient.vcxproj  QtSMTPClient.vcxproj.filters  Smtp.pri  create_archive.sh
libs/src/: mimemessage.cpp
